[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "mlfqa"
authors = [
  {name = "Shane Arora", email = "shane.arora@utexas.edu"},
]
description = "Multilingual Long-Form QA"
readme = "README.md"
dependencies = [
  "accelerate",
  "anthropic",
  "mistralai",
  "openai",
  "pydantic",
  "python-dotenv",
  "torch",
  "transformers",
  "vertexai",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F"]