[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "mlfqa"
authors = []
description = "Multilingual Long-Form QA"
readme = "README.md"
dependencies = [
  "accelerate",
  "anthropic",
  "mistralai",
  "openai",
  "pydantic",
  "python-dotenv",
  "tiktoken",
  "torch",
  "transformers",
  "vertexai",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F"]