[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "calmqa"
authors = []
description = "CaLMQA: Exploring culturally specific long-form question answering across 23 languages"
readme = "README.md"
dependencies = [
  "accelerate",
  "anthropic",
  "mistralai",
  "openai",
  "pydantic",
  "python-dotenv",
  "tiktoken",
  "torch",
  "transformers",
  "vertexai",
]

[project.optional-dependencies]
autoeval = [
  "fasttext",
  "langdetect",
  "langid",
  "polyglot",
  "pycld2",
  "PyICU",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F"]